--- a/STM32F0/Projects/STM32F0_SWD/STM32F0_SWD.ioc
+++ b/STM32F0/Projects/STM32F0_SWD/STM32F0_SWD.ioc
@@ -18,8 +18,8 @@ Mcu.PinsNb=5
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
-MxCube.Version=5.6.1
-MxDb.Version=DB.5.0.60
+MxCube.Version=6.0.1
+MxDb.Version=DB.6.0.0
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -57,30 +57,31 @@ ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=STM32F0_RCC_PLL_48MHz.ioc
-ProjectManager.ProjectName=STM32F0_RCC_PLL_48MHz
+ProjectManager.ProjectFileName=STM32F0_SWD.ioc
+ProjectManager.ProjectName=STM32F0_SWD
+ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.27
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC_Init-ADC-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM14_Init-TIM14-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
 RCC.FCLKCortexFreq_Value=48000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=48000000
-RCC.HSE_VALUE=24000000
 RCC.I2C1Freq_Value=48000000
 RCC.I2c1ClockSelection=RCC_I2C1CLKSOURCE_SYSCLK
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,I2C1Freq_Value,I2c1ClockSelection,PLLCLKFreq_Value,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,I2C1Freq_Value,I2c1ClockSelection,PLLCLKFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,VCOOutput2Freq_Value
 RCC.PLLCLKFreq_Value=48000000
+RCC.PLLMUL=RCC_PLL_MUL6
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.SYSCLKFreq_VALUE=48000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
-RCC.VCOOutput2Freq_Value=24000000
+RCC.VCOOutput2Freq_Value=8000000
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
