--- a/STM32F0/Projects/STM32F0_GPIO/STM32F0_GPIO.ioc
+++ b/STM32F0/Projects/STM32F0_GPIO/STM32F0_GPIO.ioc
@@ -11,57 +11,30 @@ Mcu.Name=STM32F030F4Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PF1-OSC_OUT
-Mcu.Pin10=PB1
-Mcu.Pin11=PA9
-Mcu.Pin12=PA10
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=VP_SYS_VS_Systick
-Mcu.Pin2=PA0
-Mcu.Pin3=PA1
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA4
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=16
+Mcu.Pin2=PA4
+Mcu.Pin3=PB1
+Mcu.Pin4=PA13
+Mcu.Pin5=PA14
+Mcu.Pin6=VP_SYS_VS_Systick
+Mcu.PinsNb=7
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
-MxCube.Version=5.6.1
-MxDb.Version=DB.5.0.60
+MxCube.Version=6.0.1
+MxDb.Version=DB.6.0.0
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-PA0.Locked=true
-PA0.Signal=GPIO_Output
-PA1.Locked=true
-PA1.Signal=GPIO_Output
-PA10.Locked=true
-PA10.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_SWCLK
-PA2.Locked=true
-PA2.Signal=GPIO_Output
-PA3.Locked=true
-PA3.Signal=GPIO_Output
 PA4.Locked=true
 PA4.Signal=GPIO_Output
-PA5.Locked=true
-PA5.Signal=GPIO_Output
-PA6.Locked=true
-PA6.Signal=GPIO_Output
-PA7.Locked=true
-PA7.Signal=GPIO_Output
-PA9.Locked=true
-PA9.Signal=GPIO_Output
 PB1.Locked=true
 PB1.Signal=GPIO_Input
 PF0-OSC_IN.Mode=HSE-External-Oscillator
@@ -92,11 +65,12 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=STM32F0_GPIO.ioc
 ProjectManager.ProjectName=STM32F0_GPIO
+ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.27
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC_Init-ADC-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM14_Init-TIM14-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
