--- a/STM32F0/Projects/STM32F0_UART/STM32F0_UART.ioc
+++ b/STM32F0/Projects/STM32F0_UART/STM32F0_UART.ioc
@@ -21,8 +21,8 @@ Mcu.PinsNb=7
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
-MxCube.Version=5.6.1
-MxDb.Version=DB.5.0.60
+MxCube.Version=6.0.1
+MxDb.Version=DB.6.0.0
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -66,13 +66,14 @@ ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=STM32F0_USART.ioc
-ProjectManager.ProjectName=STM32F0_USART
+ProjectManager.ProjectFileName=STM32F0_UART.ioc
+ProjectManager.ProjectName=STM32F0_UART
+ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.27
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC_Init-ADC-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM14_Init-TIM14-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
