--- a/STM32F0/Setup files/STM32F0_GPIO/STM32F0_GPIO.ioc
+++ b/STM32F0/Setup files/STM32F0_GPIO/STM32F0_GPIO.ioc
@@ -20,8 +20,8 @@ Mcu.PinsNb=7
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
-MxCube.Version=6.0.1
-MxDb.Version=DB.6.0.0
+MxCube.Version=6.1.1
+MxDb.Version=DB.6.0.10
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -43,7 +43,7 @@ PF1-OSC_OUT.Locked=true
 PF1-OSC_OUT.Mode=HSE-External-Oscillator
 PF1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
+ProjectManager.AskForMigrate=false
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
@@ -52,7 +52,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F030F4Px
-ProjectManager.FirmwarePackage=STM32Cube FW_F0 V1.11.1
+ProjectManager.FirmwarePackage=STM32Cube FW_F0 V1.11.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
