--- a/STM32F0/Setup files/STM32F0_TIM/STM32F0_TIM.ioc
+++ b/STM32F0/Setup files/STM32F0_TIM/STM32F0_TIM.ioc
@@ -6,7 +6,7 @@ Mcu.Family=STM32F0
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=TIM1
+Mcu.IP3=TIM14
 Mcu.IPNb=4
 Mcu.Name=STM32F030F4Px
 Mcu.Package=TSSOP20
@@ -17,7 +17,8 @@ Mcu.Pin3=PA7
 Mcu.Pin4=PA13
 Mcu.Pin5=PA14
 Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.PinsNb=7
+Mcu.Pin7=VP_TIM14_VS_ClockSourceINT
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
@@ -38,15 +39,15 @@ PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=LED_PA4
 PA4.Locked=true
 PA4.Signal=GPIO_Output
-PA7.Mode=PWM Generation1 CH1N
-PA7.Signal=TIM1_CH1N
+PA7.Locked=true
+PA7.Signal=S_TIM14_CH1
 PF0-OSC_IN.Mode=HSE-External-Oscillator
 PF0-OSC_IN.Signal=RCC_OSC_IN
 PF1-OSC_OUT.Locked=true
 PF1-OSC_OUT.Mode=HSE-External-Oscillator
 PF1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=false
+ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
@@ -92,8 +93,12 @@ RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
 RCC.Usart1ClockSelection=RCC_USART1CLKSOURCE_SYSCLK
 RCC.VCOOutput2Freq_Value=8000000
-TIM1.Channel-PWM\ Generation1\ CH1N=TIM_CHANNEL_1
-TIM1.IPParameters=Channel-PWM Generation1 CH1N
+SH.S_TIM14_CH1.0=TIM14_CH1,PWM Generation1 CH1
+SH.S_TIM14_CH1.ConfNb=1
+TIM14.Channel=TIM_CHANNEL_1
+TIM14.IPParameters=Channel
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 board=custom
