--- a/STM32F4/Setup files/STM32F4_MCO/STM32F4_MCO.ioc
+++ b/STM32F4/Setup files/STM32F4_MCO/STM32F4_MCO.ioc
@@ -9,18 +9,20 @@ Mcu.IP2=SYS
 Mcu.IPNb=3
 Mcu.Name=STM32F411C(C-E)Ux
 Mcu.Package=UFQFPN48
-Mcu.Pin0=PH0 - OSC_IN
-Mcu.Pin1=PH1 - OSC_OUT
-Mcu.Pin2=PA8
-Mcu.Pin3=PA13
-Mcu.Pin4=PA14
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.PinsNb=6
+Mcu.Pin0=PC14-OSC32_IN
+Mcu.Pin1=PC15-OSC32_OUT
+Mcu.Pin2=PH0 - OSC_IN
+Mcu.Pin3=PH1 - OSC_OUT
+Mcu.Pin4=PA8
+Mcu.Pin5=PA13
+Mcu.Pin6=PA14
+Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411CEUx
-MxCube.Version=6.0.1
-MxDb.Version=DB.6.0.0
+MxCube.Version=6.2.1
+MxDb.Version=DB.6.0.21
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -38,6 +40,10 @@ PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA8.Mode=Clock-out-1
 PA8.Signal=RCC_MCO_1
+PC14-OSC32_IN.Mode=LSE-External-Oscillator
+PC14-OSC32_IN.Signal=RCC_OSC32_IN
+PC15-OSC32_OUT.Mode=LSE-External-Oscillator
+PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PH0\ -\ OSC_IN.Locked=true
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
@@ -54,7 +60,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F411CEUx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.25.2
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -90,13 +96,13 @@ RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=150000000
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO1PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RCC_MCO1Source,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=100000000
+RCC.MCO1PinFreq_Value=25000000
 RCC.PLLCLKFreq_Value=100000000
 RCC.PLLM=12
 RCC.PLLN=96
 RCC.PLLQCLKFreq_Value=50000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.RCC_MCO1Source=RCC_MCO1SOURCE_PLLCLK
+RCC.RCC_MCO1Source=RCC_MCO1SOURCE_HSE
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=12500000
 RCC.SYSCLKFreq_VALUE=100000000
